# mindmesh

./: README.md  pyproject.toml
data/obsidian/: README.md
data/obsidian/child/: README.md
data/obsidian_to_origin/: README.md
data/obsidian_to_origin/child/: README.md
samples/: convert_obsidian_to_gitbook.sh  convert_obsidian_to_origin.sh
scripts/: convert.py  test.py  test2.py
src/mindmesh/: __init__.py  gitbook2origin.py  markdown.py  obsidian2origin.py  utils.py
